@@ -1,3 +1,8 @@
+Wed Nov 25 15:06:42 2009  Akinori MUSHA  <knu@iDaemons.org>
+
+	* test/ruby/test_array.rb (TestArray#test_splat): Add tests for a
+	  recently introduced bug in array splatting.
+
 Tue Nov 24 16:18:35 2009  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/digest/lib/md5.rb, ext/digest/lib/sha1.rb: Add an
